# yconf

./: LICENSE  README.md  stack.yaml  yconf.cabal
examples/1/: MANIFEST  conf1.yml  conf2.json  dimensions.yml
examples/2/: MANIFEST
examples/3/: MANIFEST
src/YConf/: Backend.hs  Frontend.hs  Live.hs  Tree.hs  Types.hs
src/YConf/Backend/: FileSystem.hs  HTTP.hs  Helpers.hs
src/YConf/Frontend/: HTTP.hs  Helpers.hs  MessagePack.hs
tests/: Helpers.hs  Tests.hs
